chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-name
spec:
  replicas: 1
  selector:
    matchLabels:
      label-key : label-value  
  template:
    metadata:
      labels:
        label-key : label-value  
    spec:
      containers:
        - name: deploment-container-name
          image: stephenwike/spike-ng-deploy:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
