chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-angular-service
  labels:
    app: example-angular
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: example-angular
